--- a/app/globals.css
+++ b/app/globals.css
@@ -9,5 +9,5 @@ body {
 
 footer {
     background-color: #1b1b1b;
-    height: 13rem;
+    /*height: 13rem;*/
 }
